{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 164,
  "lineage": "41bbbb34-ca66-3975-baeb-47556eb51a07",
  "resources": [
    {
      "module": "module.master-node",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/master-nic",
            "internal_domain_name_suffix": "f5qisem5qmke3lhrhczu13t1fd.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/master-public-ip",
                "subnet_id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "master-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "master-nic",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.master-node.azurerm_public_ip.master",
            "module.network.azurerm_subnet.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.master-node",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/master-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.160.224",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "master-public-ip",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-nsg",
            "location": "centralindia",
            "name": "dev-vnet-nsg",
            "resource_group_name": "dev-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet-nsg",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_intra_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-nsg/securityRules/allow-intra-vnet",
            "name": "allow-intra-vnet",
            "network_security_group_name": "dev-vnet-nsg",
            "priority": 1002,
            "protocol": "*",
            "resource_group_name": "dev-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-intra-vnet",
            "network_security_group_name": "dev-vnet-nsg",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "dev-vnet-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "dev-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-ssh",
            "network_security_group_name": "dev-vnet-nsg",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "name": "dev-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-subnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "network_security_group_id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-nsg",
            "subnet_id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "module.network.azurerm_network_security_group.main",
            "module.network.azurerm_subnet.main",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1189e02f-839f-4e14-acf1-38b34df67b2b",
            "id": "/subscriptions/4052107a-ff42-4770-977e-860cabe0f656/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "centralindia",
            "name": "dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "dev-vnet",
            "resource_group_name": "dev-rg",
            "subscription_id": "4052107a-ff42-4770-977e-860cabe0f656"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}